Added GraalVM GC log parsing.